apps/pocket-id/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  parentRefs:
    - name: bretagne-gateway
      namespace: traefik
      sectionName: https
  hostnames:
    - id.bretagne.dev
  rules:
    - backendRefs:
        - name: pocket-id
          port: 1411
